<resources>
    <string name="app_name">AndroidLabsDustyn</string>
    <string name="hello_message">Hello World</string>
    <string name="button">Click here</string>
    <string name="checkbox">Check this out!</string>
    <string name="Switchbox">Switch on / off</string>
    <string name="TopText">Look at my GUI</string>
    <string name="editText">Type here</string>
    <string name="moreInfoToast">Here is more info</string>
    <string name="SnackbarOn">The switch is now on</string>
    <string name="SnackBarOff">The switch is now off</string>
    <string name="emailPrompt">Enter your email address:</string>
    <string name="typeEmail">Type Email here</string>
    <string name="password">Type your password:</string>
    <string name="loginButton">Login</string>
    <string name="profile">Your Profile</string>
    <string name="namePrompt">Enter your name</string>
    <string name="picturePrompt">Your picture:</string>
    <string name="pictureHeader">Click the button above to take a picture</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="Send">Send</string>
    <string name="send">Send</string>
    <string name="receive">Recieve</string>
</resources>