<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity"
        android:orientation="vertical">
    <TextView
            android:text="@string/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView6"/>
    <TextView
            android:text="@string/namePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView7"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/namePrompt"
            android:ems="10"
            android:id="@+id/editTextTextPersonName4"/>
    <TextView
            android:text=""
            android:hint="@string/emailPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView9"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text=""
            android:hint="@string/emailPrompt"
            android:ems="10"
            android:id="@+id/editTextTextPersonName5"/>
    <TextView
            android:text="@string/picturePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView10"/>
    <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/picture_frame"
            android:id="@+id/imageButton4"/>
    <TextView
            android:text="@string/pictureHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView11"/>
    <Button
            android:text="@string/go_to_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button6"/>
</LinearLayout>