<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">


    <TextView
            android:text="@string/TopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="30dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Button
                android:text="@string/button"
                android:layout_width="250dp"
                android:layout_height="wrap_content" android:id="@+id/button3"/>
        <CheckBox
                android:text="@string/checkbox"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  tools:context=".MainActivity">
        <ImageButton
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/flag"
                android:id="@+id/imageButton"
                android:contentDescription="flag"/>

        <Switch
                android:text="@string/Switchbox"
                android:layout_width="158dp"
                android:layout_height="wrap_content" android:id="@+id/switch1"/>
    </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/editText"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            android:importantForAutofill="no"/>

</LinearLayout>
