<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
        tools:layout_editor_absoluteY="196dp"
        tools:layout_editor_absoluteX="120dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:text="@string/TopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"/>
    <Button
            android:text="@string/button"
            android:layout_alignParentStart="true"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_below="@+id/textView2" android:layout_marginStart="1dp"/>
    <CheckBox
            android:text="@string/checkbox"
            android:layout_width="155dp"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content" android:id="@+id/checkBox" android:layout_marginEnd="10dp"
            android:layout_toRightOf="@id/button2" android:layout_below="@id/textView2" android:layout_marginTop="1dp"
            android:layout_marginLeft="16dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/flag" android:id="@+id/imageButton3"
            android:layout_below="@id/button2"/>
    <Switch
            android:text="@string/Switchbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switch3"
            android:layout_toRightOf="@id/imageButton3"
            android:layout_below="@id/button2" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/editText"
            android:ems="10"
            android:id="@+id/editTextTextPersonName3"
            android:layout_below="@id/imageButton3"/>
</RelativeLayout>
